--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
   <section id="legal">
     <h3>Legal</h3>
     <p>By scheduling a service with ICONIC MOBILE DETAILS, you acknowledge and accept that all services are provided "as is." While we take the utmost care, ICONIC MOBILE DETAILS is not liable for any damage to vehicles during or after the service. The customer assumes all risks associated with the detailing process.</p>
-    <p>Payment Policy: 50% upfront, 50% upon completion. If the vehicle's condition requires additional time beyond the estimated duration, an extra charge of $25 per 30 minutes will be applied. Veterans, First Responders, and Students will receive a 10% discount off the entire bill. If the service is canceled within 48 hours of the appointment, the 50% upfront charge will not be refunded; however, no additional charges will be applied. Canceling a booking outside of the 48-hour window will result in a full refund.</p>
+    <p>Payment Policy: 50% upon booking and 50% after the detail is completed. If the vehicle's condition requires additional time beyond the estimated duration, an extra charge of $25 per 30 minutes will be applied. Veterans, First Responders, and Students will receive a 10% discount off the entire bill. If the service is canceled within 48 hours of the appointment, the 50% upfront charge will not be refunded; however, no additional charges will be applied. Canceling a booking outside of the 48-hour window will result in a full refund.</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
-    <p>Hours of Operation: Mon–Fri 5:00 PM–6:00 PM; Sat–Sun 7:00 AM–5:00 PM</p>
+    <p>&copy; 2025 ICONIC MOBILE DETAILS LLC. All Rights Reserved.</p>
+    <p>Service Areas: Georgetown, Lexington, and Versailles</p>
     <p>Contact: cvomero@iconicmobiledetails.com</p>
   </footer>
 </body>
