--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <section id="about">
     <h3>About Us</h3>
-    <p>I am an engineering graduate from the University of Kentucky who has always had an affinity for cars, particularly an obsession with how clean people could get their cars. I could not wait until the day I was 16 to get my first car and keep it clean. My hobby grew into a passion. Over the next 10 years, I researched the best products, practices, and techniques to preserve paint and restore the factory shine. My engineering background plays a role as well, studying the reactions and complements of different products and benchmarking their success to provide you, the customer, with the best all-around detailing process in Kentucky.</p>
+    <p>I am an engineering graduate from the University of Kentucky who has always had an affinity for cars. I could not wait until the day I turned 16 to get my first car. The car was delivered in a mildy dirty state so I began detailing the car. After I was done, I had recieved several remarks from friends and family regarding the thorough detail I performed. I began performing details regularly to maintain a pristine level of clean on the interior and exterior of my vehicle.  My hobby grew into a passion. Over the next 10 years, I researched the best products, practices, and techniques to preserve paint and restore the factory shine. My engineering background plays a role as well, studying the reactions and complements of different products and benchmarking their success to provide you, the customer, with the best all-around detailing process in Kentucky.</p>
   </section>
 
   <section id="expectations">
