--- a/index.html
+++ b/index.html
@@ -116,9 +116,12 @@
   <section id="services" class="active">
     <h3>Our Services</h3>
     <ul>
-      <li><strong>Entry Wash - $100:</strong> Perfect for those seeking a quick yet professional clean. Includes exterior wash, tire shine, and basic interior vacuum. <em>Estimated Time: 2 Hours.</em></li>
-      <li><strong>Medium Wash - $200:</strong> Enjoy a more comprehensive clean with Entry Wash services plus interior shampoo and dashboard detailing. <em>Estimated Time: 4 Hours.</em></li>
-      <li><strong>Advanced Wash - $400:</strong> Experience premium detailing with Medium Wash services plus clay bar treatment and paint sealant for long-lasting shine. <em>Estimated Time: 6 Hours.</em></li>
+      <li><strong>Entry Wash - $100:</strong> Perfect for those seeking a quick yet professional clean. Includes exterior wash, tire shine, and basic interior vacuum. <em>Estimated Time: 2 Hours.</em></p>
+      </li>
+      <li><strong>Medium Wash - $200:</strong> Enjoy a more comprehensive clean with Entry Wash services plus interior shampoo and dashboard detailing. <em>Estimated Time: 4 Hours.</em></p>
+      </li>
+      <li><strong>Advanced Wash - $400:</strong> Experience premium detailing with Medium Wash services plus clay bar treatment and paint sealant for long-lasting shine. <em>Estimated Time: 6 Hours.</em></p>
+      </li>
       <li><strong>Showroom Wash - $1000:</strong> The ultimate detailing package. Includes Advanced Wash services plus ceramic coating and engine bay cleaning. Your car will look like it just rolled off the showroom floor. <em>Estimated Time: 8 Hours.</em></li>
     </ul>
     <p><strong>Discount:</strong> Veterans, First Responders, and Students receive a 10% off their entire bill.</p>
